# chess-planning-development-of-pieces

./: .flake8  .gitignore  README.md  pyproject.toml
notebooks/: Planning_the_Development_of_Pieces_in_Chess.ipynb
